# Anubis

./: .anubis  .gitignore  Cargo.toml  LICENSE.md  README.md  anubis.db  test.md
.github/workflows/: main.yml
default_templates/: Collapse.html  index.html  page.html  struct.html
src/: README.md  anubis.rs  cli.rs  common.rs  config.rs  database.rs  db.rs  error.rs  lib.rs  main.rs  parser.rs  parser_core.rs  renderer.rs  server.rs
tests/: config.rs  db.rs  lib.rs  parser.rs  test_config.anubis
