[package]
name = "anubis"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
globset = "0.4.15"
nom = "8.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
test-case = "3.3.1"
walkdir = "2.5.0"
