[package]
name = "anubis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
comrak = "0.35.0"
derive_more = { version = "2.0.1", features = ["display", "error"] }
globset = "0.4.15"
markdown = "1.0.0-alpha.22"
nom = "8.0.0"
petgraph = { version = "0.7.1", features = ["serde", "serde-1"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_rusqlite = "0.37.0"
serde_with = "3.12.0"
tantivy = "0.22.0"
tera = "1.20.0"
test-case = "3.3.1"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
